# momentum

./: README.md  pyproject.toml
experiments/: core.py  utils.py
experiments/tasks/: __init__.py  mmlu.py
momentum/: agent.py  lc_utils.py  rating.py  response_example.py  types.py
tests/: test_simulated_usage.py
